# Godot_haptic_plugin

./: .gitignore  CMakeLists.txt  TutorialConfig.h.in  tutorial.cxx
.cache/clangd/index/: AlignedBox.h.C74F972963F54D58.idx  AngleAxis.h.6648D9E96BA665A4.idx  Array.h.27532CDB694062D4.idx  ArrayBase.h.5BBFAC9383286A08.idx  ArrayCwiseBinaryOps.h.FFAA2D8BFA4C1E80.idx  ArrayCwiseUnaryOps.h.7D2AF48DEB4C4717.idx  ArrayWrapper.h.9FEB83D3E4331F39.idx  Assign.h.84B6D4B8D3732CDA.idx  BandMatrix.h.93B44761F0CA1630.idx  BlasUtil.h.74B8DF64746309CD.idx  Block.h.13005B51C7F750F7.idx  BlockHouseholder.h.F29604EA23507F8A.idx  BlockMethods.h.870B85F779AE774C.idx  BooleanRedux.h.3CFB7C2834F00EB6.idx  CConstants.h.E7A771D40559ABDF.idx  CGenericDevice.h.20F48BC11094B990.idx  CGenericHapticDevice.h.512EE9F757355D28.idx  CGlobals.h.F9EE29D33C596E3F.idx  CHapticDeviceHandler.h.AD083D992F6D1494.idx  CMaths.h.7E764E7E005AEA67.idx  CMatrix3d.h.A985124F231D96CC.idx  CPhantomDevices.h.4C712FEEBA5D345E.idx  CPrecisionClock.h.067E301A5B999FD6.idx  CString.h.83AE62CA81C5F1E4.idx  CTransform.h.97C5371312BB124C.idx  CVector3d.h.8531C23F92BEEFD6.idx  Cholesky.AD0A8A64A787265B.idx  CoeffBasedProduct.h.C107A4F903C1A414.idx  ColPivHouseholderQR.h.2B24D5535D99BAEC.idx  CommaInitializer.h.4B26DDC9B9A1AFDE.idx  CommonCwiseBinaryOps.h.83B1119258D93481.idx  Complex.h.B09BC145EC99B709.idx  (+237 more)
HapticPlugin/: CMakeLists.txt
HapticPlugin/.cache/clangd/index/: HapticsPlugin.cpp.63923C4A0823E097.idx
Step1_build/: Tutorial  TutorialConfig.h
src/: HapticsPlugin.cpp  HapticsPlugin.h
test/: TestHapticPlugin.cpp
